fix (Sass): Correct custom checkbox alignment

--- a/assets/styles/partials/_global.scss
+++ b/assets/styles/partials/_global.scss
@@ -55,6 +55,7 @@ textarea {
 }
 
 blockquote {
+  position: relative;
   padding: 0 1rem;
   border: none;
   font: oblique 1.2rem/1 'Raleway', 'Helvetica Neue', sans-serif;
@@ -66,13 +67,12 @@ blockquote {
   }
   &:before {
     content: open-quote;
-    left: 0.5rem;
-    top: 0.5rem;
+    left: -0.75rem;
+    top: -0.75rem;
   }
   &:after {
     content: close-quote;
-    right: 1rem;
-    margin-top: 0.25rem;
+    right: 0;
   }
 }
 
