--- a/assets/styles/partials/_main.scss
+++ b/assets/styles/partials/_main.scss
@@ -39,17 +39,6 @@
         float: right;
         &:before { @extend %tt-left-shadow; }
         &:after { @extend %tt-left; }
-        // .panel {
-        //   &-header {
-        //     .collapse-up,
-        //     > div {
-        //       left: auto;
-        //       right: -0.5rem;
-        //       order: 1;
-        //       transition: transform 0.5s ease;
-        //     }
-        //   }
-        // }
       }
     }
   }
@@ -63,7 +52,7 @@
     bottom: 0;
     margin-left: -2.5px;
     border-radius: 1rem;
-    background-color: $theme-content-lt;  // $theme-red-no-op;
+    background-color: $theme-content-lt;
     -webkit-filter: drop-shadow(0 0 7.5px #999);
     filter:         drop-shadow(0 0 7.5px #999);
   }
@@ -73,70 +62,15 @@
     width: 70%;
     left: 22.5%;
     border: 1px solid $theme-border;
-    background-color: #FFF;
+    transition: outline 0.5s ease-in-out;
+    outline: 0 solid $theme-trans;
+    background-color: $theme-content-lt;
     &:before { @extend %tt-right-shadow; }
     &:after { @extend %tt-right; }
-    // .panel {
-    //   &-header,
-    //   &-body,
-    //   &-footer {
-    //     position: relative;
-    //     padding: 1.25rem;
-    //     border: none;
-    //   }
-    //   &-header {
-    //     display: flex;
-    //     justify-content: space-around;
-    //     align-items: baseline;
-    //     h3 {
-    //       width: 95%;
-    //       color: $theme-red;
-    //     }
-    //     .collapse-up {
-    //       transition: transform 0.5s ease;
-    //       position: relative;
-    //       top: -0.5rem;
-    //       left: -0.5rem;
-    //       font-size: 1.5rem;
-    //       cursor: pointer;
-    //     }
-    //   }
-    //   &-body {
-    //     [class^='tl-'] {
-    //       margin: 1rem 0 0;
-    //       .toggle-glyph {
-    //         transition: transform 0.25s ease;
-    //         float: right;
-    //         &.active { transform: rotateZ(90deg); }
-    //       }
-    //     }
-    //     .tl-location,
-    //     .tl-photos { cursor: pointer; }
-    //     // .static-map-wrapper {
-    //     //   position: relative;
-    //     //   height: 0;
-    //     //   margin: 0.5rem 1rem 0 0.5rem;
-    //     //   border-left: thin dashed $theme-red;
-    //     //   overflow: hidden;
-    //     //   &.active { height: auto; }
-    //     //   img {
-    //     //     width: calc(100% - 0.714286rem);
-    //     //     margin-left: 0.714286rem;
-    //     //   }
-    //     // }
-    //   }
-    //   // &-footer {
-    //   //   display: flex;
-    //   //   flex-flow: row nowrap;
-    //   //   justify-content: space-between;
-    //   //   align-items: center;
-    //   //   background-color: #F4F4F4;
-    //   //   .glyphicon-star,
-    //   //   .glyphicon-star-empty { cursor: pointer; }
-    //   //   .glyphicon-star { color: #F6DB3D; }
-    //   // }
-    // }
-    &:hover .tl-toolbar { @extend %visible; }
+    &:hover {
+      .tl-toolbar,
+      .collapse-up { @extend %visible; }
+    }
     .tl-toolbar {
       @include cbTransition(0.25s 0.25s cubic-bezier(0, 0.25, 0.7, 0.4));
       @extend %hidden;
@@ -167,7 +101,6 @@
     }
   }
 } 
-
 
 .btn-controls {
   @extend %br-circle;
@@ -211,7 +144,6 @@
   }
 }
 
-
 .btn-shadow {
   position: fixed;
   width: 5rem;
@@ -234,18 +166,6 @@
   }
 }
 
-// .panel {
-//   &-header {
-//     .collapse-up,
-//     > div {
-//       left: auto;
-//       right: -0.5rem;
-//       order: 1;
-//       transition: transform 0.5s ease;
-//     }
-//   }
-// }
-
 .panel {
   &-header,
   &-body,
@@ -255,20 +175,27 @@
     border: none;
   }
   &-header {
-    display: flex;
-    justify-content: space-around;
-    align-items: baseline;
+    @include flex(flex, row nowrap, space-around, baseline);
     h3 {
       width: 95%;
       color: $theme-red;
     }
     .collapse-up {
-      transition: transform 0.5s ease;
+      @include cbTransition(0.25s 0.25s cubic-bezier(0, 0.25, 0.7, 0.4));
+      @extend %hidden;
       position: relative;
       top: -0.5rem;
       left: -0.5rem;
       font-size: 1.5rem;
       cursor: pointer;
+    }
+    &.inverted {
+      .checkbox,
+      .collapse-up {
+        left: auto;
+        right: -0.5rem;
+        order: 1;
+      } 
     }
   }
   &-body {
@@ -307,11 +234,8 @@
   }
 }
 
-
 .batch-action-btns {
   position: fixed;
-  // width: 3.2142857142857144rem;
-  // height: 3.2142857142857144rem;
   right: 5.5rem;
   border-radius: 50%;
   border: none;
@@ -337,15 +261,16 @@
   }
 }
 
-.tl-event .panel-header h3 {
-  width: 80% !important;
-  text-align: end;
-}
-.tl-event-invert .panel-header h3 {
-  width: 80% !important;
-  text-align: start;
-}
-
-.tl-event-panel.batch-select-active {
-  outline: 21px solid rgba(177, 91, 91, 0.23);
+.tl-event {
+  .panel-header {
+    h3 {
+      width: 80% !important;
+      text-align: end;
+    }
+    &.inverted h3 { text-align: start; }
+  }
+  &-panel.batch-select-active {
+    transition: outline 0.5s ease-in-out;
+    outline: 21px solid rgba(177, 91, 91, 0.23);
+  }
 }
