--- a/assets/styles/partials/_utility.scss
+++ b/assets/styles/partials/_utility.scss
@@ -64,7 +64,6 @@ input[type='checkbox'] {
       width: 1rem;
       height: 1rem;
       left: 0.35rem;
-      top: -1px;
       border: 2.5px solid $cb-unchecked;
       border-radius: 3px;
       transition: all 0.325s ease-out;
@@ -87,13 +86,11 @@ input[type='checkbox'] {
       width: 1.75rem;
       height: 1.75rem;
       left: -0.25rem;
-      top: -1.25rem;
     }
     &:checked + label:before {
       width: 1.09rem;
       height: 2rem;
       left: -0.25rem;
-      top: -1.25rem;
       border-width: 4px;
     }
   }
@@ -102,12 +99,13 @@ input[type='checkbox'] {
   &:checked + label:before,
   + label:before {
     left: auto;
-    right: -0.25rem;
+    right: 0.25rem;
   }
 }
 
 
 .tooltip {
+  @extend %hidden;
   position: absolute;
   right: calc(100% + 0.75rem);
   top: 50%;
@@ -115,17 +113,12 @@ input[type='checkbox'] {
   border-radius: 1rem;
   transform: translateY(-50%);
   transition: all 0.45s ease-in-out;
-  color: #FFF;
+  color: $theme-content-lt;
   background-color: #888;
   white-space: pre;
   font-size: 1.25rem;
-  opacity: 0;
-  visibility: hidden;
   z-index: 2;
   .batch-action-btns:hover &,
-  .btn-controls-child:hover & {
-    opacity: 1;
-    visibility: visible;
-  }
+  .btn-controls-child:hover & { @extend %visible; }
 }
 
